Increase contrast from 3.0 to 4.5 (fixing bad settings in checker).

--- a/src/modules/uv-shared-module/css/variables.less
+++ b/src/modules/uv-shared-module/css/variables.less
@@ -36,10 +36,10 @@
 // Brand colors
 // -------------------------
 
-@brand-primary:                 #14A2C1; // #14a4c3 tuned for 4.5 contrast with white text
+@brand-primary:                 #10819A; // #14a4c3 tuned for 4.5 contrast with white text
 @brand-primary-light:           lighten(@brand-primary, 60%);
 @brand-primary-lighter:         lighten(@brand-primary, 90%);
-@brand-secondary:               #14A2C1;
+@brand-secondary:               #10819A;
 @brand-warning:                 #FFB81D;
 @brand-success:                 #5cb85c;
 @brand-danger:                  #d9534f;
